@@ -245,7 +245,10 @@ PKL_DEF_INSN(PKL_INSN_SEL, "", "sel")
 
 /* Array instructions.  */
 
+PKL_DEF_INSN(PKL_INSN_XMKA, "", "xmka")
+
 PKL_DEF_INSN(PKL_INSN_MKA, "", "mka")
+PKL_DEF_INSN(PKL_INSN_AINS, "", "ains")
 PKL_DEF_INSN(PKL_INSN_AREF, "", "aref")
 PKL_DEF_INSN(PKL_INSN_AREFO, "", "arefo")
 PKL_DEF_INSN(PKL_INSN_ASET, "", "aset")
